# AES_sensor_fusion

./: CMakeLists.txt  README.md  package.xml
include/sensor_fusion/: message_types.h
measure/: fusion.csv
node/: .fusion_node.cpp.swp  .fusion_node.h.swp  1  fusion_node.cpp  fusion_node.h  process.cpp
src/: coordinate.cpp  coordinate.h  coordinate_transformation_front_radar_track.cpp  coordinate_transformation_front_radar_track.h  coordinate_transformation_front_vision_lane.cpp  coordinate_transformation_front_vision_lane.h  coordinate_transformation_front_vision_track.cpp  coordinate_transformation_front_vision_track.h  correction.cpp  correction.h  defines.txt  filter_in_vehicle_sensor.cpp  filter_in_vehicle_sensor.h  gating.cpp  gating.h  inv.cpp  inv.h  motion_attribute.cpp  motion_attribute.h  pedestrian_recognition.cpp  pedestrian_recognition.h  prediction.cpp  prediction.h  road_curvature.cpp  road_curvature.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  shape_attribute.cpp  shape_attribute.h  sort.cpp  sort.h  sortIdx.cpp  sortIdx.h  (+24 more)
